--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ body {
   opacity: 0.5;
 }
 
-.add-cateogry {
+.add-category {
   background-color: var(--white-color);
   margin: 4px 0;
   padding: 8px 16px;
@@ -769,6 +769,7 @@ body {
 }
 .add-category-save-btn,
 .add-category-cancel-btn {
+  margin-left: 1rem;
   text-align: right;
   color: var(--main-color);
   cursor: pointer;
@@ -793,7 +794,7 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  height: 85%;
+  height: 80%;
   overflow-y: scroll;
 }
 .draggable {
@@ -804,6 +805,19 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.fa-trash-can {
+  opacity: 0;
+  color: var(--text-color);
+  font-size: 0.7rem;
+  margin-left: 1rem;
+  padding: 0.3rem 0.5rem;
+}
+
+.draggable:hover .fa-trash-can {
+  opacity: 0.7;
+  cursor: pointer;
 }
 
 .fa-grip-lines {
