--- a/style.css
+++ b/style.css
@@ -176,13 +176,13 @@ body {
 }
 
 .input-popup {
-  margin: 0.5rem;
+  margin: 0.5rem 0;
 }
 .popupheader {
   display: flex;
   justify-content: space-between;
 }
-.reset-btn {
+.clear-btn {
   display: relative;
   left: 100%;
   border: none;
@@ -303,9 +303,7 @@ body {
 .input-category-expense {
   border: 1px solid var(--expense-color);
 }
-.hidden {
-  display: none;
-}
+
 .type-not-selected {
   opacity: 50%;
 }
@@ -346,9 +344,8 @@ body {
 .item-container {
   padding: var(--base-size) 4rem;
   background-color: var(--white-color);
-  display: none;
+  display: block;
   flex-direction: column;
-  border: 1px solid black;
 }
 
 .item-popup {
@@ -528,6 +525,7 @@ body {
 
 .dates:hover {
   border: 0.1rem solid var(--sub-color);
+  cursor: pointer;
 }
 
 .today {
@@ -639,7 +637,7 @@ body {
 
 /* Setting style */
 
-#setting {
+.setting {
   width: 50rem;
   height: 50rem;
   background-color: var(--white-color);
@@ -650,12 +648,11 @@ body {
   transform: translate(-50%);
   z-index: 10;
   color: var(--text-color);
-  display: none;
 }
 
-#overlay {
+.overlay {
   position: fixed;
-  opacity: 0;
+  opacity: 1;
   top: 0;
   left: 0;
   right: 0;
@@ -664,10 +661,10 @@ body {
   pointer-events: none;
 }
 
-#overlay.active {
+/* .overlay.active {
   opacity: 1;
   pointer-events: all;
-}
+} */
 
 .setting-header {
   padding: var(--small-size) var(--base-size);
@@ -688,21 +685,7 @@ body {
   color: var(--white-color);
   background-color: var(--sub-color);
   font-size: 2rem;
-}
-
-.setting-items {
-  width: 40%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  font-size: 1rem;
-}
-
-.setting-item {
-  border-radius: 10px;
-  background-color: var(--white-color);
-  color: var(--sub-color);
-  padding: 0.5rem 1rem;
+  cursor: pointer;
 }
 
 .setting-item-header {
@@ -725,22 +708,30 @@ body {
   font-weight: bold;
   background-color: var(--white-color);
 }
-
+.change-status {
+  font-size: 0.7rem;
+  color: grey;
+  margin: 0 1rem;
+}
+.change-saved {
+  color: var(--main-color);
+}
 .category-setting {
   width: 80%;
-  padding: 0 0.5rem;
+  padding: 0 0.5rem 0.5rem 0.5rem;
   margin: auto;
   display: flex;
   justify-content: space-evenly;
   border-radius: 10px;
   background-color: var(--background-color);
   color: var(--text-color);
+  overflow-y: hidden;
 }
 
 .cat-setting {
   width: 50%;
   margin: 0.5rem;
-  height: 30rem;
+  height: 35rem;
 }
 .cat-set-headers {
   display: flex;
@@ -760,7 +751,7 @@ body {
 .add-category {
   background-color: var(--white-color);
   margin: 4px 0;
-  padding: 8px 16px;
+  padding: 8px 8px;
   border-radius: 5px;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
@@ -803,7 +794,7 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-  height: 80%;
+  height: 100%;
   overflow-y: scroll;
 }
 .draggable {
@@ -863,4 +854,8 @@ body {
 }
 .dragging-exp {
   opacity: 0.5;
+}
+
+.hidden {
+  display: none;
 }
